fixing background
background is not showing on iphone 7

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1367,6 +1367,14 @@ img.zoom-img:hover {
 	.footer h3 a {
 		font-size: 1.1em;
 	}
+	.banner {
+          background: url(../images/maroun2.jpg) no-repeat center center fixed; 
+          -webkit-background-size: cover;
+          -moz-background-size: cover;
+          -o-background-size: cover;
+          background-size: cover;
+          background-color: #464646;
+	}
 	h3.heading {
 		margin: 0 auto .5em;
 	}
@@ -1404,6 +1412,14 @@ img.zoom-img:hover {
 	}
 	.about h3.heading {
 		width: 50%;
+	}
+	.banner {
+          background: url(../images/maroun2.jpg) no-repeat center center fixed; 
+          -webkit-background-size: cover;
+          -moz-background-size: cover;
+          -o-background-size: cover;
+          background-size: cover;
+          background-color: #464646;
 	}
 	.education .col-md-6, .experience .col-md-6 {
 		padding: 0 15px 0 0;
